working account creation and working communication with the backend